# helloworld

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  _z_buffer.tga
src/: main.cpp
src/geometry/: CMakeLists.txt  color.cpp  color.h  drawing.cpp  drawing.h  geometry.h  interpolation.cpp  interpolation.h
src/getopt/: CMakeLists.txt
src/model/: CMakeLists.txt  model.cpp  model.h
src/tgaimage/: CMakeLists.txt  tgaimage.cpp  tgaimage.h
src/win/getopt/: CMakeLists.txt
